# CeeDee-Ripper

./: .gitignore  .list.swp  AI Rules.md  Build Instructions.md  Cargo.toml  NFO.md  README.md  Rules-for-Copilot_Gemini2.5.Pro.md  build.rs  ceedee-ripper_1.0.0_amd64.snap  list  note  packages.list  preferences.md  restore-snap  snapcraft-creds  snapcraft.yaml  text  tmpInstall
.github/instructions/: build-instructions.instructions.md  snapcraft.instructions.md
.github/workflows/: build.yml
NOTES/: Build Instructions.md  NFO.md
parts/ceedee-ripper/run/: build.sh  environment.sh  pull.sh
parts/ceedee-ripper/state/: build  prime  pull  stage
prime/meta/: snap.yaml
resources/: ceedee-ripper.desktop  ceedee_ripper.gresource.xml  resources.gresource.xml  style.css  window.ui
resources/ui/: window.ui
scripts/: install-deps.sh
snap/gui/: ceedee-ripper.desktop
src/: app.rs  cd_reader.rs  cddb.rs  config.rs  main.rs  music_brainz.rs  ripper.rs  window.rs  window.ui
