[package]
name = "ceedee-ripper"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.10", package = "gtk4", features = ["v4_10"] }
libadwaita = "0.8"
glib = "0.20"
gio = "0.20"

gstreamer = "0.23"
gstreamer-audio = "0.23"
gtk4-sys = "0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
discid = "0.5"
libc = "0.2"
ureq = { version = "2.9", features = ["json"] }
serde_json = "1.0"
gdk-pixbuf = "0.21.5"

[build-dependencies]
glib-build-tools = "0.20"
glib-2-0-sys = "0.46.4"
