[package]
name = "CeeDee-Ripper"
version = "1.0.0"
edition = "2021"

[dependencies]
gtk = { version = "0.7.3", package = "gtk4" }
libadwaita = "0.5.0"
glib = "0.18.0"
gio = "0.18.0"

gstreamer = "0.22.0"
gstreamer-audio = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
discid = "0.5"
libc = "0.2"
ureq = { version = "2.9", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
glib-build-tools = "0.18.0"
