[package]
name = "CeeDee-Ripper"
version = "1.0.0"
edition = "2021"

[dependencies]
gtk4 = "0.11.3"
libadwaita = "0.9.1"
libadwaita-sys = "0.9.1"
gio = "0.18.0"
gstreamer = "0.22.0"
gstreamer-audio = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
discid = "0.5"
libc = "0.2"
ureq = { version = "2.9", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
glib = "0.22.6"
glib-2-0-sys = "0.46.4"

[build-dependencies]
glib-build-tools = "0.18.0"
